--- a/index.html
+++ b/index.html
@@ -69,43 +69,19 @@
         }
 
         .logo {
-            font-size: 1.8rem;
+            font-family: 'Cinzel', serif;
+            font-size: 2rem;
             font-weight: 700;
             background: linear-gradient(to right, var(--gradient-start), var(--gradient-end));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
             text-fill-color: transparent;
-            letter-spacing: -1px;
+            letter-spacing: 0px;
         }
 
         .logo span {
-            font-weight: 300;
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 2.5rem;
-        }
-
-        .nav-links a {
-            font-weight: 500;
-            position: relative;
-        }
-
-        .nav-links a::after {
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 2px;
-            bottom: -5px;
-            left: 0;
-            background: linear-gradient(to right, var(--gradient-start), var(--gradient-end));
-            transition: width 0.3s ease;
-        }
-
-        .nav-links a:hover::after {
-            width: 100%;
+            font-weight: 400;
         }
 
         .cta-button {
@@ -817,13 +793,119 @@
                 font-size: 2rem;
             }
 
-            .nav-links {
-                display: none;
-            }
-
             .footer-content {
                 grid-template-columns: 1fr;
                 gap: 3rem;
+            }
+        }
+
+        /* Collaboration Section Styles */
+        .collaboration {
+            padding: 100px 0;
+            background-color: var(--darker-bg);
+        }
+
+        .collaboration-content {
+            display: flex;
+            justify-content: center;
+            text-align: center;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .collaboration-features {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 2rem;
+            margin: 3rem 0;
+        }
+
+        .collab-feature {
+            padding: 2rem;
+            background: rgba(126, 58, 237, 0.1);
+            border-radius: 16px;
+            border: 1px solid rgba(126, 58, 237, 0.2);
+        }
+
+        /* Modal Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        .modal-content {
+            background: var(--darker-bg);
+            padding: 2rem;
+            border-radius: 16px;
+            max-width: 500px;
+            width: 90%;
+            position: relative;
+            border: 1px solid rgba(126, 58, 237, 0.2);
+        }
+
+        .close-modal {
+            position: absolute;
+            right: 1rem;
+            top: 1rem;
+            font-size: 1.5rem;
+            cursor: pointer;
+            color: var(--text-dim);
+        }
+
+        .bitcash-options {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 1rem;
+            margin: 2rem 0;
+        }
+
+        .bitcash-option {
+            padding: 1rem;
+            border: 1px solid rgba(126, 58, 237, 0.2);
+            border-radius: 8px;
+            text-align: center;
+        }
+
+        .bitcash-option.popular {
+            border-color: var(--accent);
+            position: relative;
+        }
+
+        .payment-form {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+
+        .payment-form input {
+            padding: 0.8rem;
+            border-radius: 8px;
+            border: 1px solid rgba(126, 58, 237, 0.2);
+            background: rgba(126, 58, 237, 0.1);
+            color: var(--text);
+        }
+
+        .card-details {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 1rem;
+        }
+
+        @media (max-width: 768px) {
+            .collaboration-features {
+                grid-template-columns: 1fr;
+            }
+
+            .bitcash-options {
+                grid-template-columns: 1fr;
             }
         }
     </style>
@@ -833,14 +915,8 @@
     <header>
         <div class="container">
             <nav>
-                <a href="#" class="logo">conse<span>qence</span></a>
-                <div class="nav-links">
-                    <a href="#features">Features</a>
-                    <a href="#workflow">Workflow</a>
-                    <a href="#pricing">Pricing</a>
-                    <a href="#testimonials">Testimonials</a>
-                </div>
-                <button class="cta-button">Download</button>
+                <a href="login.html" class="logo">conse<span>qence</span></a>
+                <a href="login.html" class="cta-button">Login</a>
             </nav>
         </div>
     </header>
@@ -888,10 +964,10 @@
                     <p class="hero-subtitle">
                         Revolutionary plugin for Logic Pro & FL Studio that connects your DAW to a browser-based AI workstation. Transform your production workflow with intelligent audio processing and creative assistance.
                     </p>
-                    <button class="cta-button">Start Creating Now</button>
+                    <a href="download.html" class="cta-button">Download</a>
                 </div>
                 <div class="hero-img">
-                    <img src="/api/placeholder/640/360" alt="Conseqence Music Production Software Interface">
+                    <img src="Leonardoconsequence.jpeg" alt="Consequence Logo - A glowing geometric symbol in a space-themed environment with purple nebula effects">
                 </div>
             </div>
         </div>
@@ -1011,4 +1087,142 @@
                     <img src="/api/placeholder/540/360" alt="Conseqence Recording Interface">
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- Collaboration Section -->
+    <section class="collaboration">
+        <div class="container">
+            <h2 class="section-title">Real-Time Collaboration</h2>
+            <div class="collaboration-content">
+                <div class="collaboration-text">
+                    <h3>Connect with Artists Worldwide</h3>
+                    <p>Book studio time, collaborate in real-time, and pay seamlessly with BitCash.</p>
+                    <div class="collaboration-features">
+                        <div class="collab-feature">
+                            <div class="feature-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"/></svg>
+                            </div>
+                            <h4>Live Sessions</h4>
+                            <p>Connect with producers and artists in real-time virtual studio sessions.</p>
+                        </div>
+                        <div class="collab-feature">
+                            <div class="feature-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"/></svg>
+                            </div>
+                            <h4>BitCash Payment</h4>
+                            <p>Purchase BitCash credits for seamless studio bookings and collaborations.</p>
+                        </div>
+                    </div>
+                    <button class="cta-button" onclick="openBitCashModal()">Buy BitCash</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- BitCash Modal -->
+    <div id="bitcash-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-modal" onclick="closeBitCashModal()">&times;</span>
+            <h2>Purchase BitCash</h2>
+            <div class="bitcash-options">
+                <div class="bitcash-option">
+                    <h3>100 BitCash</h3>
+                    <p>$10</p>
+                    <button class="cta-button">Purchase</button>
+                </div>
+                <div class="bitcash-option">
+                    <h3>500 BitCash</h3>
+                    <p>$45</p>
+                    <button class="cta-button">Purchase</button>
+                </div>
+                <div class="bitcash-option popular">
+                    <h3>1000 BitCash</h3>
+                    <p>$80</p>
+                    <button class="cta-button">Purchase</button>
+                </div>
+            </div>
+            <div class="payment-form">
+                <input type="text" placeholder="Card Number">
+                <div class="card-details">
+                    <input type="text" placeholder="MM/YY">
+                    <input type="text" placeholder="CVC">
+                </div>
+                <button class="cta-button">Complete Purchase</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-brand">
+                    <a href="#" class="footer-logo">conse<span>qence</span></a>
+                    <p class="footer-description">
+                        Transform your music production workflow with AI-powered tools and real-time collaboration.
+                    </p>
+                    <div class="footer-social">
+                        <a href="#" class="social-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22.46 6c-.77.35-1.6.58-2.46.69.88-.53 1.56-1.37 1.88-2.38-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29 0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15 0 1.49.75 2.81 1.91 3.56-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07 4.28 4.28 0 0 0 4 2.98 8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21 16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56.84-.6 1.56-1.36 2.14-2.23z"/></svg>
+                        </a>
+                        <a href="#" class="social-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg>
+                        </a>
+                    </div>
+                </div>
+                <div class="footer-links">
+                    <h4>Product</h4>
+                    <ul>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#workflow">Workflow</a></li>
+                        <li><a href="#pricing">Pricing</a></li>
+                        <li><a href="#">Download</a></li>
+                    </ul>
+                </div>
+                <div class="footer-links">
+                    <h4>Company</h4>
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-links">
+                    <h4>Legal</h4>
+                    <ul>
+                        <li><a href="#">Terms</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Cookies</a></li>
+                        <li><a href="#">Licenses</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Conseqence. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script>
+        // BitCash Modal Functions
+        function openBitCashModal() {
+            document.getElementById('bitcash-modal').style.display = 'flex';
+        }
+
+        function closeBitCashModal() {
+            document.getElementById('bitcash-modal').style.display = 'none';
+        }
+
+        // Close modal when clicking outside
+        window.onclick = function(event) {
+            const modal = document.getElementById('bitcash-modal');
+            if (event.target == modal) {
+                modal.style.display = 'none';
+            }
+        }
+    </script>
+</body>
+</html>
                 
