Remove .html suffixes and fix navigation paths for cleaner URLs

--- a/login.html
+++ b/login.html
@@ -274,10 +274,8 @@
     <script>
         function handleLogin(event) {
             event.preventDefault();
-            // Set logged_in flag in sessionStorage
             sessionStorage.setItem('logged_in', 'true');
-            // Redirect to studio page
-            window.location.href = 'studio.html';
+            window.location.href = 'studio';
         }
     </script>
 </body>
