--- a/download.html
+++ b/download.html
@@ -227,12 +227,10 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <nav>
-                <a href="index.html" class="logo">conse<span>qence</span></a>
-                <a href="login.html" class="cta-button">Login</a>
-            </nav>
-        </div>
+        <nav class="container">
+            <a href="/" class="logo">conse<span>qence</span></a>
+            <a href="login" class="cta-button">Login</a>
+        </nav>
     </header>
 
     <section class="download-section">
